SyntacticAnalyzer/tests/fail/sentenciasimple-expresion-VER.java
class foo {
	ctor (int n1)
	var int n2;
	{
		(n1 != 6 > n2 && true - 4 || n2 == null); // aca deberia fallar
	}
}
